# CapstoneThings

./: CMakeLists.txt  algo.cpp  algo.hpp  binding.cpp  compare_assignments.ipynb  make_inputs.cpp  make_inputs.hpp  new_algo.cpp  new_algo.txt  test_algo.cpp  test_algo.ipynb  yens.cpp
